--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1728,7 +1728,7 @@
    ],
    "source": [
     "df_genres = pd.read_csv(filepath_genres)\n",
-    "df_genres = df_genres.drop([\"description\", \"slug\", \"created_at\", \"updated_at\"], axis=1)\n",
+    "df_genres = df_genres.drop([\"description\", \"slug\", \"created_at\", \"updated_at\", ], axis=1)\n",
     "\n",
     "print(\"The length of the dataframe:\\t{}\\n\\nThe dtypes of all columns:\\n\\n{}\\n\".format(len(df_genres), df_genres.dtypes))\n",
     "\n",
@@ -1737,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2094,12 +2094,13 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "genres_to_index = dict(zip(df_genres.name, df_genres.genre_id))\n",
     "genre_names_strings = df_artists[\"cached_genres\"].tolist()\n",
     "genre_ids_lists = []\n",
     "\n",
@@ -2107,14 +2108,12 @@
     "    genre_names_list = genre_names_string.split(\", \")\n",
     "    genre_id_list = []\n",
     "    for genre_name in genre_names_list:\n",
-    "        genre_id_as_numpy = df_genres.loc[(df_genres[\"name\"] == genre_name), \"genre_id\"].values\n",
-    "        if genre_id_as_numpy.size == 0:\n",
+    "        if genre_name not in genres_to_index.keys():\n",
     "            genre_name = genre_name.strip()\n",
-    "            genre_id_as_numpy = df_genres.loc[(df_genres[\"name\"] == genre_name), \"genre_id\"].values\n",
-    "        genre_id = genre_id_as_numpy[0]\n",
+    "        genre_id = genres_to_index[genre_name]\n",
     "        genre_id_list.append(genre_id)\n",
     "    genre_ids_lists.append(genre_id_list)\n",
-    "    \n",
+    "            \n",
     "df_artists.insert(3, \"genre_ids\", genre_ids_lists)\n",
     "df_artists.head(10)"
    ]
